--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "next": "12.0.1",
     "prop-types": "^15.7.2",
