--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,7 @@
   "author": "Gabriel Claudino <gabriel.claudino@protonmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "@mui/x-data-grid": "^5.0.0-beta.6",
     "next": "12.0.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
