--- a/ui/package.json
+++ b/ui/package.json
@@ -12,12 +12,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
+    "@apollo/link-error": "^2.0.0-beta.3",
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "@mui/x-data-grid": "^5.0.0-beta.6",
+    "deepmerge": "^4.2.2",
+    "graphql": "^16.0.1",
+    "lodash": "^4.17.21",
     "next": "12.0.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
