refactor(mongo): change the collection from students to student

--- a/api/db-seed/Dockerfile
+++ b/api/db-seed/Dockerfile
@@ -1,4 +1,4 @@
 FROM mongo
 
 COPY db.json /db.json
-CMD mongoimport --host mongodb --db descomplica-challenge --collection students --type json --file /db.json --jsonArray
+CMD mongoimport --host mongodb --db descomplica-challenge --collection student --type json --file /db.json --jsonArray
