--- a/ui/package.json
+++ b/ui/package.json
@@ -29,10 +29,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.1",
+    "eslint": "^8.2.0",
+    "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "2.4.1"
+    "prettier": "^2.4.1"
   }
 }
