--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "koa-respond": "^2.1.0",
     "koa-router": "^10.1.1",
     "mongoose": "^6.0.12",
+    "mongoose-delete": "^0.5.4",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
